--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "drizzle-orm": "^0.44.2",
     "lucide-react": "^0.522.0",
     "next": "15.3.3",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
+    "react-toastify": "^11.0.5",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.1"
   },
@@ -29,7 +31,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "drizzle-kit": "^0.31.4",
+    "drizzle-kit": "^0.18.1",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "sqlite3": "^5.1.7",
