--- a/package.json
+++ b/package.json
@@ -9,19 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@uiw/react-md-editor": "4.0.8",
     "better-sqlite3": "^12.2.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.44.2",
-    "lucide-react": "^0.522.0",
+    "lucide-react": "0.522.0",
     "next": "15.3.3",
-    "next-themes": "^0.4.6",
+    "next-themes": "0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
-    "react-toastify": "^11.0.5",
-    "rehype-sanitize": "^6.0.0",
-    "remark-gfm": "^4.0.1"
+    "react-toastify": "11.0.5",
+    "rehype-sanitize": "6.0.0",
+    "remark-gfm": "4.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -29,7 +30,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/react": "19.1.12",
     "@types/react-dom": "^19",
     "drizzle-kit": "^0.18.1",
     "eslint": "^9",
